Move style properties

--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,14 @@
 <html>
     <head>
         <title>Hello World</title>
+        <style>
+            h1{
+                color:blue
+            }
+        </style>
     </head>
     <body>
         <p>Hello World</p>
-        <h1 style="color:blue">added h1 Hello World</h1>
+        <h1>added h1 Hello World</h1>
     </body>
 </html>
