--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <p>Hello World</p>
-        <h1 style="color:blue">added h1 Hello World</h1>
+        <h1 style="color:blue">added h1 Hello</h1>
     </body>
 </html>
