Setting Git Desktop

--- a/hello.html
+++ b/hello.html
@@ -9,7 +9,7 @@
         </style>
     </head>
     <body>
-        <p>Hello World</p>
+        <p>Hello World, This ia s trial to do stuff</p>
         <h1>added h1 Hello World</h1>
     </body>
 </html>
